WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267823
Fix use-after-move in WebExtensionTab::captureVisibleWebpage
https://bugs.webkit.org/show_bug.cgi?id=267823
Summary
Fix use-after-move in WebExtensionTab::captureVisibleWebpage
David Kilzer (:ddkilzer)
Reported
2024-01-20 16:34:00 PST
Fix use-after-move of `completionHandler` in WebExtensionTab::captureVisibleWebpage. Regressed in: Add support for the tabs.captureVisibleTab() Web Extension API.
rdar://problem/115703327
https://webkit.org/b/261716
https://commits.webkit.org/268131@main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-20 16:34:08 PST
<
rdar://problem/121324738
>
David Kilzer (:ddkilzer)
Comment 2
2024-01-20 16:44:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23019
EWS
Comment 3
2024-01-21 19:23:07 PST
Committed
273284@main
(ea1f43afcb3f): <
https://commits.webkit.org/273284@main
> Reviewed commits have been landed. Closing PR #23019 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug