Fix use-after-move in WebExtensionTab::captureVisibleWebpage https://bugs.webkit.org/show_bug.cgi?id=267823 <rdar://121324738>

Reviewed by Timothy Hatcher.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionTabCocoa.mm:
(WebKit::WebExtensionTab::captureVisibleWebpage):
- Rearrange the logic in the method to move the early return that calls
  completionHandler() to the top of the method.

Canonical link: https://commits.webkit.org/273284@main